[gd_scene format=3 uid="uid://c1xnpteo6atvc"]

[ext_resource type="PackedScene" uid="uid://ccs75bygv2cx6" path="res://scenes/WotwMap.tscn" id="1_elqb8"]
[ext_resource type="Script" uid="uid://imy6sqiq04ty" path="res://scenes/Main.gd" id="1_rvslj"]
[ext_resource type="PackedScene" path="res://scenes/EventsView.tscn" id="3_0bbpv"]
[ext_resource type="Texture2D" uid="uid://dbov4h51d3bln" path="res://assets/ui/Play.svg" id="4_rarhs"]

[node name="Main" type="Control" unique_id=1364075408]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rvslj")

[node name="Background" type="ColorRect" parent="." unique_id=1022705432]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="WotwMap" parent="." unique_id=324143865 instance=ExtResource("1_elqb8")]
unique_name_in_owner = true
layout_mode = 1

[node name="EventsView" parent="WotwMap" unique_id=110558812 instance=ExtResource("3_0bbpv")]
unique_name_in_owner = true

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1785859688]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VContainerBottom" type="VBoxContainer" parent="MarginContainer" unique_id=1307293539]
layout_mode = 2
size_flags_vertical = 8

[node name="HContainerControls" type="HBoxContainer" parent="MarginContainer/VContainerBottom" unique_id=995774292]
layout_mode = 2

[node name="HContainerLeft" type="HBoxContainer" parent="MarginContainer/VContainerBottom/HContainerControls" unique_id=1706166655]
layout_mode = 2
size_flags_vertical = 8

[node name="PlayButton" type="TextureButton" parent="MarginContainer/VContainerBottom/HContainerControls/HContainerLeft" unique_id=244655765]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("4_rarhs")
ignore_texture_size = true
stretch_mode = 0

[node name="SpeedSlider" type="HSlider" parent="MarginContainer/VContainerBottom/HContainerControls/HContainerLeft" unique_id=2028721729]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
min_value = 1.0
max_value = 20.0
step = 0.1
value = 10.0
tick_count = 5
ticks_on_borders = true
ticks_position = 1

[node name="SpeedLabel" type="Label" parent="MarginContainer/VContainerBottom/HContainerControls/HContainerLeft" unique_id=1304205]
unique_name_in_owner = true
layout_mode = 2
text = "Speedx"

[node name="VContainerRight" type="VBoxContainer" parent="MarginContainer/VContainerBottom/HContainerControls" unique_id=1602875439]
layout_mode = 2
size_flags_horizontal = 10

[node name="HContainerFadeOut" type="HBoxContainer" parent="MarginContainer/VContainerBottom/HContainerControls/VContainerRight" unique_id=335419853]
layout_mode = 2

[node name="FadeOutLabel" type="Label" parent="MarginContainer/VContainerBottom/HContainerControls/VContainerRight/HContainerFadeOut" unique_id=1025074201]
layout_mode = 2
text = "Fade Out "
horizontal_alignment = 2

[node name="FadeOutButton" type="CheckButton" parent="MarginContainer/VContainerBottom/HContainerControls/VContainerRight/HContainerFadeOut" unique_id=360782043]
layout_mode = 2
button_pressed = true

[node name="HContainerSlider" type="HBoxContainer" parent="MarginContainer/VContainerBottom" unique_id=431114483]
layout_mode = 2

[node name="TimeSlider" type="HSlider" parent="MarginContainer/VContainerBottom/HContainerSlider" unique_id=1189300682]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 0.0

[node name="TimeLabel" type="Label" parent="MarginContainer/VContainerBottom/HContainerSlider" unique_id=257079204]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
horizontal_alignment = 2

[connection signal="pressed" from="MarginContainer/VContainerBottom/HContainerControls/HContainerLeft/PlayButton" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="MarginContainer/VContainerBottom/HContainerControls/HContainerLeft/SpeedSlider" to="." method="_on_speed_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VContainerBottom/HContainerControls/VContainerRight/HContainerFadeOut/FadeOutButton" to="." method="_on_fade_out_button_toggled"]
[connection signal="drag_ended" from="MarginContainer/VContainerBottom/HContainerSlider/TimeSlider" to="." method="_on_time_slider_drag_ended"]
[connection signal="drag_started" from="MarginContainer/VContainerBottom/HContainerSlider/TimeSlider" to="." method="_on_time_slider_drag_started"]
[connection signal="value_changed" from="MarginContainer/VContainerBottom/HContainerSlider/TimeSlider" to="." method="_on_time_slider_value_changed"]
